<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="300"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_color"
        android:icon="@drawable/ic_color_mark"
        android:orderInCategory="200"
        android:title="@string/color"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:orderInCategory="400"
        android:title="@string/all"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="500"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

</menu>